Fix Angular Canvas layout issues.

--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -51,7 +51,7 @@ body {
 }
 
 div.content {
-    padding: 0;
+    padding: 1rem 0;
 }
 
 .loader {
@@ -71,7 +71,7 @@ div.content {
     display: none;
 }
 
-.hide-sm {
+.hide-xs {
     display: none;
 }
   
@@ -102,10 +102,10 @@ div.content {
     }
 
     div.content {
-        padding: 0;
+        padding: 1rem 2rem;
     }
 
-    .hide-sm {
+    .hide-xs {
         display: inline;
     }
 }
